--- a/index.html
+++ b/index.html
@@ -18,19 +18,33 @@
   <body>
     <div class="section-container">
       <header class="header">
-        <div class="logo-container">
-          <img src="./img/windone-logo1.png" alt="Logo de Empresa" />
-        </div>
-        <nav class="navbar">
-          <label for="toggle-menu"><i class="fas fa-bars"></i></label>
-          <input type="checkbox" id="toggle-menu" />
-          <ul class="navbar-list">
-            <li><a href="#hero">Home</a></li>
-            <li><a href="#product">Tienda</a></li>
-            <li><a href="#about">Nosotros</a></li>
-            <li><a href="#contact">Contacto</a></li>
+        <div class="panel-header">
+          <ul class="panel-list">
+            <li><a href="">Iniciar Sesión</a></li>
+            <li><a href="">¿Aun no te registraste?</a></li>
           </ul>
-        </nav>
+        </div>
+
+        <div class="header-content">
+          <div class="logo-container">
+            <img src="./img/windone-logo1.png" alt="Logo de Empresa" />
+          </div>
+          <nav class="navbar">
+            <label for="signin-menu">
+              <a href="">
+                <i class="fa-solid fa-arrow-right-to-bracket"></i>
+              </a>
+            </label>
+            <label for="toggle-menu"><i class="fas fa-bars"></i></label>
+            <input type="checkbox" id="toggle-menu" />
+            <ul class="navbar-list">
+              <li><a href="#hero">Home</a></li>
+              <li><a href="#product">Tienda</a></li>
+              <li><a href="#about">Nosotros</a></li>
+              <li><a href="#contact">Contacto</a></li>
+            </ul>
+          </nav>
+        </div>
       </header>
 
       <div class="banner">
