--- a/index.html
+++ b/index.html
@@ -304,6 +304,35 @@
             <button class="responsive-btn">Registrate Aquí</button>
           </section>
         </div>
+
+        <!-- CONTACTO -->
+        <div class="section-container">
+          <section class="section" id="contact">
+            <div class="contact-container">
+              <div class="text-container-contact">
+                <h2 class="section-title">CONTACTO</h2>
+                <h3>ESTAMOS EN CONTACTO</h3>
+                <p class="section-p-small">Email: info@wind-one.com.ar</p>
+                <p class="section-p-small">
+                  Whatsapp: +549 3512345678 (10am – 6pm)
+                </p>
+              </div>
+              <div class="text-container-contact">
+                <h3>ENCONTRANOS</h3>
+                <p class="section-p-small">Av. Armada Argentina 3896</p>
+                <p class="section-p-small">CP: 5000. Córdoba, Argentina</p>
+              </div>
+              <div class="text-container-contact">
+                <h3>HORARIOS</h3>
+                <p class="section-p-small">
+                  Lunes a Viernes: 09:00hs a 18:00hs
+                </p>
+                <p class="section-p-small">Sábados: 09:00hs a 13:30hs</p>
+              </div>
+            </div>
+            <div class="contact-img"></div>
+          </section>
+        </div>
       </main>
 
       <div class="section-container">
