--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <header class="header">
         <div class="panel-header">
           <ul class="panel-list">
-            <li><a href="./Login/login.html">Iniciar Sesión</a></li>
-            <li><a href="">¿Aun no te registraste?</a></li>
+            <li><a href="./login.html">Iniciar Sesión</a></li>
+            <li><a href="./registro.html">¿No tienes cuenta?</a></li>
           </ul>
         </div>
 
@@ -31,7 +31,7 @@
           </div>
           <nav class="navbar">
             <label for="signin-menu">
-              <a href="./Login/login.html">
+              <a href="./login.html">
                 <i class="fa-solid fa-arrow-right-to-bracket"></i>
               </a>
             </label>
@@ -60,7 +60,9 @@
                 <h1>WIND ONE</h1>
                 <p>Artículos de Surf</p>
               </div>
-              <button class="primary-button">Registrate Aquí</button>
+              <a href="./registro.html"
+                ><button class="primary-button">Registrate Aquí</button></a
+              >
             </div>
             <div class="hero-img-logo"></div>
           </section>
@@ -276,7 +278,9 @@
                   experiencia en la práctica del surf.
                 </p>
               </div>
-              <button class="primary-button">Registrate Aquí</button>
+              <a href="./registro.html"
+                ><button class="primary-button">Registrate Aquí</button></a
+              >
             </div>
             <div class="about-img"></div>
 
@@ -301,7 +305,9 @@
                 </div>
               </div>
             </div>
-            <button class="responsive-btn">Registrate Aquí</button>
+            <a href="./registro.html"
+              ><button class="responsive-btn">Registrate Aquí</button></a
+            >
           </section>
         </div>
 
@@ -314,7 +320,7 @@
                 <h3>ESTAMOS EN CONTACTO</h3>
                 <p class="section-p-small">Email: info@wind-one.com.ar</p>
                 <p class="section-p-small">
-                  Whatsapp: +549 3512345678 (10am – 6pm)
+                  Whatsapp: +549 3512345678 (10am - 6pm)
                 </p>
               </div>
               <div class="text-container-contact">
