--- a/registro.html
+++ b/registro.html
@@ -26,7 +26,7 @@
               type="text"
               name="name"
               id="name"
-              placeholder="Ingresa tu email"
+              placeholder="Ingresa tu nombre"
             />
           </div>
           <div class="control">
