--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 
         <div class="header-content">
           <div class="logo-container">
-            <img src="./img/windone-logo1.png" alt="Logo de Empresa" />
+            <a href="./index.html">
+              <img src="./img/windone-logo1.png" alt="Logo de Empresa" />
+            </a>
           </div>
           <nav class="navbar">
             <label for="signin-menu">
@@ -344,7 +346,9 @@
       <div class="section-container">
         <footer class="footer">
           <div class="footer-container">
-            <img src="./img/windone1.png" alt="Logo Stretch" />
+            <a href="./index.html">
+              <img src="./img/windone1.png" alt="Logo Stretch" />
+            </a>
           </div>
           <div class="footer-info">
             <div class="footer-social">
