--- a/index.html
+++ b/index.html
@@ -352,14 +352,14 @@
           </div>
           <div class="footer-info">
             <div class="footer-social">
-              <i class="fab fa-twitter"></i>
-              <i class="fab fa-facebook"></i>
+              <a href=""><i class="fab fa-twitter"></i></a>
+              <a href=""><i class="fab fa-facebook"></i></a>
             </div>
-            <p class="footer-copyright">WindOne @ 2022</p>
+            <p class="footer-copyright">WindOne © - 2022</p>
             <div class="footer-terms">
+              <a href="">Avisos Legales</a>
               <a href="">Privacidad</a>
-              <a href="">Términos de uso</a>
-              <a href="">Contactanos</a>
+              <a href="">Condiciones de uso</a>
             </div>
           </div>
         </footer>
